[project]
name = "pyqttier"
version = "0.2.2"
description = "Convenient wrapper around Paho MQTT"
readme = "README.md"
authors = [
    { name = "Jacob Brunson", email = "github@jacobbrunson.com" }
]
requires-python = ">=3.7"
dependencies = [
    "paho-mqtt>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyqttier"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=23.3.0",
    "pytest>=7.4.4",
    "mypy>=1.4.1",
]
